# aleph-skill

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  README.vi.md  SKILL.md  THIRD_PARTY_NOTICES.md  component-lock.json  distribution-manifest.json  package-lock.json  package.json  pyproject.toml
adapters/: agents.md  claude-code.md  codex.md  opencode.md  registry.json
agents/: openai.yaml
examples/: forward-test-prompts.md
references/: adaptive-research-workflow.md  aleph-core-integration.md  artifact-contract.md  branch-management.md  bundled-research-routing.md  causal-edge-protocol.md  d-research-integration.md  evaluation-forward-tests.md  human-node-protocol.md  node-builder.md  propagation-engine.md  reporting-contract.md  safety-and-privacy.md  simulation-workflow.md  temporal-modes.md
schemas/: actor-dossier.schema.json  branch-ledger.schema.json  causal-edge.schema.json  finalization-receipts.schema.json  interventions.schema.json  numerical-propagation-trace-row.schema.json  propagation-trace-row.schema.json  run-ledger.schema.json  schema-catalog.json  simulation-manifest.schema.json  timeline-node.schema.json
scripts/: _lib.py  acceptance.py  actor_packet.py  aleph_bridge.py  build_release_assets.py  check_adapters.py  compile_model.py  evaluate_simulation_quality.py  finalize_simulation.py  import_research_ledger.py  init_simulation_workspace.py  install_adapters.py  lock_bundled_component.py  migrate_workspace.py  preflight.py  release_gate.py  render_simulation_report.py  replay_simulation.py  research_gateway.py  run_hindcast.py  run_sensitivity.py  run_simulation.py  score_butterfly.py  validate_domain_packs.py  validate_simulation_artifacts.py  validate_skill_package.py  verify_receipts.py  verify_release_tag.py
templates/: actor-dossier.json  branch-ledger.json  causal-edge.json  evidence-map.csv  human-track-ledger.jsonl  propagation-trace.jsonl  simulation-manifest.json  subagent-research-prompt.md  subagent-roleplay-prompt.md  timeline-node.json  validation-report.json
tests/: test_adapters_v201.py  test_component_packaging.py  test_component_registry.py  test_engine_migration_v2.py  test_engine_v21_dynamics.py  test_execution_contract_completion.py  test_final_engine_hardening.py  test_final_integrity_hardening.py  test_final_packaging_hardening.py  test_final_roleplay_hardening.py  test_formula_v21_contract.py  test_foundation_depth_v2.py  test_likelihood_contract_v201.py  test_protocol_edges_v2.py  test_protocol_v201.py  test_release_blocker_regressions.py  (+16 more)
(+279 files in other folders)
