[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aleph-skill"
version = "1.2.0"
description = "Adaptive evidence-saturated causal simulation across counterfactual pasts, alternate presents, and branching futures."
requires-python = ">=3.10"
license = { text = "CC-BY-NC-4.0" }
authors = [
  { name = "d-init-d" }
]
keywords = [
  "agent-skills",
  "aleph",
  "causal-simulation",
  "counterfactual",
  "timeline",
  "butterfly-effect"
]
dependencies = []

[project.optional-dependencies]
dev = [
  "ruff>=0.15"
]

[tool.setuptools]
py-modules = []

[tool.ruff]
target-version = "py310"
line-length = 100
