[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aleph-skill"
version = "2.2.0"
description = "Portable causal timeline simulation with bundled D Research, strict validation, numerical engine, domain packs, and thin adapters."
requires-python = ">=3.10"
license = { text = "CC-BY-NC-4.0" }
authors = [
  { name = "d-init-d" }
]
keywords = [
  "agent-skills",
  "aleph",
  "causal-simulation",
  "counterfactual",
  "timeline",
  "butterfly-effect"
]
dependencies = []

[project.optional-dependencies]
dev = [
  "coverage[toml]>=7.6",
  "mypy>=1.11",
  "ruff>=0.15"
]
scientific = [
  "numpy>=1.24",
  "scipy>=1.10"
]

[tool.setuptools]
package-dir = { "" = "scripts" }

[tool.setuptools.packages.find]
where = ["scripts"]
include = ["aleph*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.coverage.run]
branch = true
source = ["scripts/aleph"]

[tool.coverage.report]
fail_under = 82
show_missing = true
skip_covered = true
